KKUTU_ERROR.log
This is an error log file of the game server.
You may use like `tail -f KKUTU_ERROR.log` to watch this.
:2083 [1/27/2026, 21:42:36] ERROR: SyntaxError: Invalid regular expression: /^())./: Unmatched ')'
SyntaxError: Invalid regular expression: /^())./: Unmatched ')'
    at new RegExp (<anonymous>)
    at produce (/kkutu/Server/lib/Game/games/classic.js:1110:23)
    at /kkutu/Server/lib/Game/games/classic.js:1106:4
    at callback (/kkutu/Server/lib/sub/collection.js:316:13)
    at Query.preCB (/kkutu/Server/lib/sub/collection.js:298:6)
    at Query.handleReadyForQuery (/kkutu/Server/lib/node_modules/pg/lib/query.js:138:12)
    at Client._handleReadyForQuery (/kkutu/Server/lib/node_modules/pg/lib/client.js:290:19)
    at Connection.emit (events.js:314:20)
    at /kkutu/Server/lib/node_modules/pg/lib/connection.js:114:12
    at Parser.parse (/kkutu/Server/lib/node_modules/pg-protocol/dist/parser.js:40:17):2083 [1/27/2026, 21:42:45] ERROR: SyntaxError: Invalid regular expression: /^())./: Unmatched ')'
SyntaxError: Invalid regular expression: /^())./: Unmatched ')'
    at new RegExp (<anonymous>)
    at produce (/kkutu/Server/lib/Game/games/classic.js:1110:23)
    at /kkutu/Server/lib/Game/games/classic.js:1106:4
    at callback (/kkutu/Server/lib/sub/collection.js:316:13)
    at Query.preCB (/kkutu/Server/lib/sub/collection.js:298:6)
    at Query.handleReadyForQuery (/kkutu/Server/lib/node_modules/pg/lib/query.js:138:12)
    at Client._handleReadyForQuery (/kkutu/Server/lib/node_modules/pg/lib/client.js:290:19)
    at Connection.emit (events.js:314:20)
    at /kkutu/Server/lib/node_modules/pg/lib/connection.js:114:12
    at Parser.parse (/kkutu/Server/lib/node_modules/pg-protocol/dist/parser.js:40:17):2083 [2/11/2026, 22:42:07] ERROR: ReferenceError: random is not defined
ReferenceError: random is not defined
    at exports.Room.exports.getTitle (/kkutu/Server/lib/Game/games/typing.js:54:3)
    at exports.Room.my.route.my.routeSync (/kkutu/Server/lib/Game/kkutu.js:1353:13)
    at exports.Room.my.getTitle (/kkutu/Server/lib/Game/kkutu.js:1341:13)
    at exports.Room.my.start (/kkutu/Server/lib/Game/kkutu.js:1147:6)
    at exports.Client.my.practice (/kkutu/Server/lib/Game/kkutu.js:715:15)
    at Object.KKuTu.onClientMessage (/kkutu/Server/lib/Game/slave.js:311:7)
    at WebSocket.<anonymous> (/kkutu/Server/lib/Game/kkutu.js:293:11)
    at WebSocket.emit (events.js:314:20)
    at Receiver._receiver.onmessage (/kkutu/Server/lib/node_modules/ws/lib/WebSocket.js:143:47)
    at Receiver.dataMessage (/kkutu/Server/lib/node_modules/ws/lib/Receiver.js:389:14):2083 [2/11/2026, 22:43:03] ERROR: ReferenceError: random is not defined
ReferenceError: random is not defined
    at exports.Room.exports.getTitle (/kkutu/Server/lib/Game/games/typing.js:54:3)
    at exports.Room.my.route.my.routeSync (/kkutu/Server/lib/Game/kkutu.js:1353:13)
    at exports.Room.my.getTitle (/kkutu/Server/lib/Game/kkutu.js:1341:13)
    at exports.Room.my.start (/kkutu/Server/lib/Game/kkutu.js:1147:6)
    at exports.Client.my.practice (/kkutu/Server/lib/Game/kkutu.js:715:15)
    at Object.KKuTu.onClientMessage (/kkutu/Server/lib/Game/slave.js:311:7)
    at WebSocket.<anonymous> (/kkutu/Server/lib/Game/kkutu.js:293:11)
    at WebSocket.emit (events.js:314:20)
    at Receiver._receiver.onmessage (/kkutu/Server/lib/node_modules/ws/lib/WebSocket.js:143:47)
    at Receiver.dataMessage (/kkutu/Server/lib/node_modules/ws/lib/Receiver.js:389:14):2083 [23/02/2026, 15:32:09] ERROR: ReferenceError: EN_MORSE is not defined
ReferenceError: EN_MORSE is not defined
    at exports.submit (/DE-LZB-KKuTu/Server/lib/Game/games/sock.js:109:48)
    at my.route.my.routeSync (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1360:13)
    at my.submit (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1329:13)
    at KKuTu.onClientMessage (/DE-LZB-KKuTu/Server/lib/Game/slave.js:222:11)
    at WebSocket.<anonymous> (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:300:11)
    at WebSocket.emit (node:events:508:28)
    at _receiver.onmessage (/DE-LZB-KKuTu/Server/lib/node_modules/ws/lib/WebSocket.js:141:47)
    at Receiver.dataMessage (/DE-LZB-KKuTu/Server/lib/node_modules/ws/lib/Receiver.js:389:14)
    at Receiver.getData (/DE-LZB-KKuTu/Server/lib/node_modules/ws/lib/Receiver.js:330:12)
    at Receiver.startLoop (/DE-LZB-KKuTu/Server/lib/node_modules/ws/lib/Receiver.js:165:16):2083 [23/02/2026, 15:33:12] ERROR: ReferenceError: EN_MORSE is not defined
ReferenceError: EN_MORSE is not defined
    at exports.submit (/DE-LZB-KKuTu/Server/lib/Game/games/sock.js:109:48)
    at my.route.my.routeSync (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1360:13)
    at my.submit (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1329:13)
    at KKuTu.onClientMessage (/DE-LZB-KKuTu/Server/lib/Game/slave.js:222:11)
    at WebSocket.<anonymous> (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:300:11)
    at WebSocket.emit (node:events:508:28)
    at _receiver.onmessage (/DE-LZB-KKuTu/Server/lib/node_modules/ws/lib/WebSocket.js:141:47)
    at Receiver.dataMessage (/DE-LZB-KKuTu/Server/lib/node_modules/ws/lib/Receiver.js:389:14)
    at Receiver.getData (/DE-LZB-KKuTu/Server/lib/node_modules/ws/lib/Receiver.js:330:12)
    at Receiver.startLoop (/DE-LZB-KKuTu/Server/lib/node_modules/ws/lib/Receiver.js:165:16):2083 [23/02/2026, 15:35:21] ERROR: ReferenceError: escapeHTML is not defined
ReferenceError: escapeHTML is not defined
    at exports.submit (/DE-LZB-KKuTu/Server/lib/Game/games/sock.js:124:81)
    at my.route.my.routeSync (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1360:13)
    at my.submit (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1329:13)
    at KKuTu.onClientMessage (/DE-LZB-KKuTu/Server/lib/Game/slave.js:222:11)
    at WebSocket.<anonymous> (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:300:11)
    at WebSocket.emit (node:events:508:28)
    at _receiver.onmessage (/DE-LZB-KKuTu/Server/lib/node_modules/ws/lib/WebSocket.js:141:47)
    at Receiver.dataMessage (/DE-LZB-KKuTu/Server/lib/node_modules/ws/lib/Receiver.js:389:14)
    at Receiver.getData (/DE-LZB-KKuTu/Server/lib/node_modules/ws/lib/Receiver.js:330:12)
    at Receiver.startLoop (/DE-LZB-KKuTu/Server/lib/node_modules/ws/lib/Receiver.js:165:16):2083 [04/03/2026, 15:12:08] ERROR: SyntaxError: Unexpected token '<'
/DE-LZB-KKuTu/Server/lib/Game/games/classic.js:276
	if(opts.my.onl) if(text.length() =< ONLYLONG_MIN) return client.publish('turnError', { code: 410, value: escapeHTML(originalText) }, true); // onlylong
	                                  ^

SyntaxError: Unexpected token '<'
    at wrapSafe (node:internal/modules/cjs/loader:1735:18)
    at Module._compile (node:internal/modules/cjs/loader:1778:20)
    at Object..js (node:internal/modules/cjs/loader:1936:10)
    at Module.load (node:internal/modules/cjs/loader:1525:32)
    at Module._load (node:internal/modules/cjs/loader:1327:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.require (node:internal/modules/cjs/loader:1548:12)
    at require (node:internal/modules/helpers:152:16)
    at exports.init (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:67:13):2083 [04/03/2026, 15:12:19] ERROR: SyntaxError: Unexpected token '<':2083 [04/03/2026, 15:24:48] ERROR: ReferenceError: opts is not defined
ReferenceError: opts is not defined
    at exports.submit (/DE-LZB-KKuTu/Server/lib/Game/games/classic.js:276:2)
    at my.route.my.routeSync (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1458:13)
    at my.submit (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1427:13)
    at my.turnRobot [as _onTimeout] (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1413:6)
    at listOnTimeout (node:internal/timers:607:11)
    at process.processTimers (node:internal/timers:541:7):2083 [04/03/2026, 15:26:02] ERROR: ReferenceError: opts is not defined
ReferenceError: opts is not defined
    at exports.submit (/DE-LZB-KKuTu/Server/lib/Game/games/classic.js:276:2)
    at my.route.my.routeSync (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1458:13)
    at my.submit (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1427:13)
    at my.turnRobot [as _onTimeout] (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1413:6)
    at listOnTimeout (node:internal/timers:607:11)
    at process.processTimers (node:internal/timers:541:7):2083 [04/03/2026, 15:31:58] ERROR: TypeError: text.length is not a function
TypeError: text.length is not a function
    at exports.submit (/DE-LZB-KKuTu/Server/lib/Game/games/classic.js:276:31)
    at my.route.my.routeSync (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1458:13)
    at my.submit (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1427:13)
    at my.turnRobot [as _onTimeout] (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1413:6)
    at listOnTimeout (node:internal/timers:607:11)
    at process.processTimers (node:internal/timers:541:7):2083 [04/03/2026, 15:33:18] ERROR: ReferenceError: length is not defined
ReferenceError: length is not defined
    at exports.submit (/DE-LZB-KKuTu/Server/lib/Game/games/classic.js:276:23)
    at my.route.my.routeSync (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1458:13)
    at my.submit (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1427:13)
    at my.turnRobot [as _onTimeout] (/DE-LZB-KKuTu/Server/lib/Game/kkutu.js:1413:6)
    at listOnTimeout (node:internal/timers:607:11)
    at process.processTimers (node:internal/timers:541:7)